--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<div id="bloque">
-		   <form id="search" name="search" action="test.py">
+		   <form id="search" name="search" action="/cgi-bin/test.py">
 				<label for="search">Search:</label>
 				<input type="text" name="consulta" id="consulta"/>
 				<input type="button" name="buscar" id="buscar" value="buscar"/>
